# learn_cpp

./: .pre-commit-config.yaml  CMakeLists.txt  LICENSE  confexample.conf
include/: SampleLib.h
include/shared/substractlib/: impl.cpp  substract.h
include/static/mylib/: somestaticlib.h
src/: SampleLib.cpp  main.cpp
